PositionMarker: don't get a hold on ViewportParams

BUG: 286799